samples/_failures_safe/1761555269_3b60c5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3da3e79d.c: In function ‘matrix_transpose’:
./samples/SAFE/__tmp_3da3e79d.c:143:5: error: expected identifier at end of input
  143 |     result->
      |     ^~~~~~
./samples/SAFE/__tmp_3da3e79d.c:143:5: error: expected declaration or statement at end of input
